--- a/home_page.css
+++ b/home_page.css
@@ -1,7 +1,149 @@
-.active {
-	background-color: red;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
+body {
+	font-family: "Netflix sans", sans-serif;
+	background-color: #111;
+}
+
+::-webkit-scrollbar {
+	width: 7px;
+	height: 5px;
+	background-color: rgb(0, 0, 0);
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: white;
+	border-radius: 10px;
+}
 .nav {
-	background-color: antiquewhite;
+	position: fixed;
+	top: 0;
+	padding: 20px 20px;
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	z-index: 1;
+	transition-timing-function: ease-in;
+	transition: all 0.5s;
+}
+.nav.active {
+	background-color: #111;
+}
+
+.nav_left {
+	margin-left: 10px;
+}
+.nav_logo {
+	width: 180px;
+}
+.nav_right {
+	position: fixed;
+	right: 30px;
+	display: flex;
+	margin-right: 10px;
+}
+.nav_avatar {
+	width: 60px;
+}
+
+#banner {
+	color: white;
+	object-fit: contain;
+	height: 645px;
+	background-position: center center;
+	background-size: cover;
+}
+#banner_contents {
+	margin-left: 70px;
+	padding-top: 340px;
+	height: 200px;
+}
+#banner_title {
+	font-size: 3rem;
+	font-weight: 800;
+	padding-bottom: 0.3rem;
+}
+
+.banner_desc {
+	overflow: hidden;
+	width: 80%;
+}
+#banner_description {
+	width: 45rem;
+	line-height: 1.5;
+	padding-top: 1rem;
+	font-size: 0.9rem;
+	height: 80px;
+}
+.banner_button {
+	cursor: pointer;
+	color: white;
+	outline: none;
+	font-weight: 700;
+	border: none;
+	border-radius: 0.2vw;
+	padding-top: 0.5rem;
+	padding-left: 2rem;
+	padding-right: 1rem;
+	padding-bottom: 0.5rem;
+	margin-bottom: 1rem;
+	margin-right: 2rem;
+	background-color: rgba(51, 51, 51, 0.5);
+}
+
+.banner_button:hover {
+	color: black;
+	background-color: #e6e6e6;
+	transition: all 0.3s;
+}
+
+#banner_fadeBottom {
+	height: 7.5rem;
+	background: linear-gradient(180deg, rgba(37, 37, 37, 0.61, #111));
+}
+
+.row {
+	margin-left: 20px;
+	color: white;
+}
+
+.row_poster {
+	object-fit: contain;
+	width: 100%;
+	max-height: 120px;
+	margin-right: 10px;
+	transition: transform 500ms;
+}
+.row_poster::-webkit-scrollbar {
+	display: none;
+}
+.row_posters {
+	display: flex;
+	overflow-y: hidden;
+	overflow-x: scroll;
+	padding: 20px;
+}
+.row_poster:hover {
+	transform: scale(1.8);
+}
+.row_posterLarge,
+.row_posterLarge1,
+.row_posterLarge2 {
+	object-fit: contain;
+	width: 100%;
+	max-height: 250px;
+	margin-right: 10px;
+	transition: transform 500ms;
+}
+
+.row_posterLarge:hover,
+.row_posterLarge1:hover,
+.row_posterLarge2:hover {
+	transform: scale(1.09);
+	opacity: 1;
 }
